fix image size issue globaly and now only visible invoice button if type = payemnt and have to approved also updated addressinformation component and single label component

--- a/src/components/Global.css
+++ b/src/components/Global.css
@@ -946,3 +946,8 @@ label {
     top: 17px;
     right: 6px;
 }
+
+img{
+  object-fit: "cover";
+  object-position: "center"
+}
